--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-modal-sheet": "^1.8.1"
+    "react-modal-sheet": "^1.8.1",
+    "uid": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
